--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@
         }
         canvas {
             border: 4px solid #000;
+            z-index: 1; /* Canvas should be behind */
+            position: relative;
         }
         .is-center {
             text-align: center;
         }
+        .dom-container {
+            z-index: 2; /* DOM elements appear on top */
+            position: absolute;
+        }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module" src="./src/main.js"></script>
 </head>
 <body>
